WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142097
RenderVideo should not paint the video frame when video is fullscreen.
https://bugs.webkit.org/show_bug.cgi?id=142097
Summary
RenderVideo should not paint the video frame when video is fullscreen.
Jeremy Jones
Reported
2015-02-27 13:14:22 PST
RenderVideo should not paint the video frame when video is fullscreen.
Attachments
Patch
(1.91 KB, patch)
2015-02-27 13:42 PST
,
Jeremy Jones
eric.carlson
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing.
(1.88 KB, patch)
2015-03-02 16:07 PST
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2015-02-27 13:33:14 PST
rdar://problem/18072471
Jeremy Jones
Comment 2
2015-02-27 13:42:05 PST
Created
attachment 247545
[details]
Patch
WebKit Commit Bot
Comment 3
2015-03-02 10:51:33 PST
Comment on
attachment 247545
[details]
Patch Rejecting
attachment 247545
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 247545, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: u'Eric Carlson']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/rendering/RenderVideo.cpp Hunk #1 FAILED at 188. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/rendering/RenderVideo.cpp.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Eric Carlson']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.appspot.com/results/4777195813732352
Jeremy Jones
Comment 4
2015-03-02 16:07:10 PST
Created
attachment 247710
[details]
Patch for landing.
WebKit Commit Bot
Comment 5
2015-03-02 16:59:22 PST
Comment on
attachment 247710
[details]
Patch for landing. Clearing flags on attachment: 247710 Committed
r180910
: <
http://trac.webkit.org/changeset/180910
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug