RenderVideo should not paint the video frame when video is fullscreen. https://bugs.webkit.org/show_bug.cgi?id=142097

Patch by Jeremy Jones <jeremyj@apple.com> on 2015-03-02
Reviewed by Eric Carlson.

For performance and correctness, RenderVideo should not paint the current video frame
inline when video is fullscreen. This happens when snapshots are taken and can have a
negative performance impact.

* rendering/RenderVideo.cpp:
(WebCore::RenderVideo::paintReplaced):

Canonical link: https://commits.webkit.org/160241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180910 268f45cc-cd09-0410-ab3c-d52691b4dbfc